--- a/resources/style.css
+++ b/resources/style.css
@@ -150,8 +150,7 @@ input[type=checkbox]:checked {
     background-repeat: no-repeat;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16px' height='16px' viewBox='0 0 16 16'%3E%3Cpath stroke='%23FFF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' fill='none' d='M4 8 7 11 12 5'/%3E%3C/svg%3E");
 }
-
-input[type=text] {
+input[type=text], input[type="number"] {
     background-color: var(--input-background);
     outline: none;
     padding: 0 8px;
@@ -159,8 +158,49 @@ input[type=text] {
     border-radius: 4px;
     border: 1px solid var(--input-border);
 }
-input[type=text]:disabled {
+input[type=text]:disabled, input[type="number"]:disabled {
     background: var(--input-background-disabled);
+}
+input[type=text]:focus, input[type="number"]:focus {
+    border-color: var(--accent);
+}
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.text-input {
+    position: relative;
+}
+.text-input-prefix input[type="text"], .text-input-prefix input[type="number"] {
+    padding-left: 16px;
+}
+.text-input-prefix:before {
+    content: "#";
+    position: absolute;
+    top: 50%;
+    left: 8px;
+    z-index: 1;
+    font-size: 12px;
+    color: var(--text-3);
+    transform: translateY(-50%);
+}
+.text-input-suffix input[type="text"], .text-input-suffix input[type="number"] {
+    padding-right: 16px;
+}
+.text-input-suffix:after {
+    content: "%";
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    z-index: 1;
+    font-size: 12px;
+    color: var(--text-3);
+    transform: translateY(-50%);
+}
+
+input[type="text"]:invalid {
+    border-color: #DD1144;
 }
 
 select {
@@ -183,6 +223,7 @@ select {
     display: inline-block;
     width: 28px;
     height: 16px;
+    vertical-align: -4px;
 }
 .switch input {
     display: none;
@@ -288,9 +329,10 @@ select {
     box-sizing: border-box;
 }
 #controller {
-    height: 56px;
+    /* height: 56px; */
+    font-size: 14px;
     box-sizing: border-box;
-    padding: 0 16px;
+    padding: 8px 16px;
     align-items: center;
     display: flex;
     border-top: 1px solid var(--border);
